<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brightWhite"
        >

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp64"
            android:fontFamily="@font/ubuntu_mono"
            android:padding="@dimen/dp24"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp42"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp32"
            android:paddingTop="@dimen/dp16"
            android:paddingEnd="@dimen/dp32"
            app:backgroundTint="@color/colorPrimary"
            android:paddingBottom="@dimen/dp16"
            android:fontFamily="@font/ubuntu_mono"
            android:text="@string/label_i_am_a_customer"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/dp32"
            app:cornerRadius="@dimen/dp24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delivery_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorSecondary"
            android:paddingStart="@dimen/dp32"
            android:paddingTop="@dimen/dp16"
            android:paddingEnd="@dimen/dp32"
            android:paddingBottom="@dimen/dp16"
            android:layout_marginTop="@dimen/dp32"
            android:fontFamily="@font/ubuntu_mono"
            android:text="@string/label_i_am_a_delivery_man"
            android:textColor="@color/brightWhite"
            android:textSize="15sp"
            app:cornerRadius="@dimen/dp24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_customer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
